--- a/tongtianta/css/1001.css
+++ b/tongtianta/css/1001.css
@@ -102,16 +102,23 @@ body {
 .loading-process-no {
   color: #fff;
   font-size: 0.5675rem;
-  font-weight: bold; }
+  font-weight: bold;
+  position: relative;
+  z-index: 3;
+  line-height: 0.85125rem; }
 
-.loading-process p {
+.loading-process-p {
   color: #0063a0;
   font-size: 0.5675rem;
-  line-height: 1.27688rem; }
+  line-height: 1.27688rem;
+  position: absolute;
+  top: 17.19525rem;
+  width: 100%;
+  text-align: center; }
 
 /* bt_nav_module */
 .bt_nav_module.buttom_suction {
-  z-index: 999; }
+  z-index: 19; }
 
 /* wrapper */
 .wrapper {
@@ -126,10 +133,26 @@ body {
   -o-transition: opacity .1s  .2s;
   width: 100%;
   overflow: hidden;
-  position: relative; }
+  position: relative;
+  padding-bottom: 50px; }
 
 .wrap-banner img {
   display: block; }
+
+.banner-btn {
+  position: absolute;
+  top: 0.5675rem; }
+
+.banner-btn-main {
+  left: 0.15606rem;
+  width: 3.61781rem;
+  height: 1.04988rem; }
+
+.banner-btn-rule {
+  right: 0.14188rem;
+  width: 2.97938rem;
+  height: 0.70938rem;
+  top: 0.73775rem; }
 
 .wrap-flr0 {
   background-color: #97f0f8; }
@@ -197,7 +220,9 @@ body {
   /*height: 1086px/$ppr;*/
   font-size: 0;
   margin-left: 4.11438rem;
-  transition: all .3s; }
+  transition: all .3s;
+  -webkit-transition: all .3s;
+  -o-transition: all .3s; }
 
 .banner-overflow-wrap .banner-balloon {
   display: inline-block;
@@ -205,6 +230,8 @@ body {
   height: 8.76788rem;
   width: 7.46263rem;
   transition: all .3s;
+  -webkit-transition: all .3s;
+  -o-transition: all .3s;
   position: relative;
   vertical-align: top; }
 
@@ -274,7 +301,9 @@ body {
 
 .banner-status-wrap .banner-ani {
   position: absolute;
-  transition: all .5s;
+  transition: all .3s;
+  -webkit-transition: all .3s;
+  -o-transition: all .3s;
   opacity: 0; }
 
 .banner-status-wrap .banner-ani img {
@@ -303,13 +332,13 @@ body {
   height: 2.89425rem;
   top: 2.08556rem; }
 
-.banner-ani-joy {
-  top: -2.11394rem;
-  left: 8.88138rem;
-  left: 9.08rem;
-  width: 4.72444rem;
-  z-index: 28; }
-
+/*.banner-ani-joy{
+  top: -149px/$ppr;
+  left: 626px/$ppr;
+  left: 640px/$ppr;
+  width: 333px/$ppr;
+  z-index: 28;
+}*/
 .banner-ani-btn-tip {
   width: 5.71756rem;
   height: 2.00044rem;
@@ -363,10 +392,14 @@ body {
 .banner-status-wrap-hide .banner-ani-rope {
   width: 0;
   opacity: 1;
-  transition: opacity .3s; }
+  transition: all .3s;
+  -webkit-transition: all .3s;
+  -o-transition: all .3s; }
 
 .banner-status-wrap-hide .banner-ani-btn, .banner-status-wrap-hide .banner-ani-btn-text {
-  transition: opacity .3s;
+  transition: all .3s;
+  -webkit-transition: all .3s;
+  -o-transition: all .3s;
   /*top: 389px/$ppr;
   height: 0;
   opacity: 1;*/ }
@@ -380,14 +413,20 @@ body {
 
 .banner-status-wrap-show .banner-ani-rope-active {
   transition: opacity .2s .3s;
+  -webkit-transition: opacity .2s .3s;
+  -o-transition: opacity .2s .3s;
   width: 6.39856rem; }
 
 .banner-status-wrap-show .banner-ani-rope-yjs {
   transition: opacity .2s .3s;
+  -webkit-transition: opacity .2s .3s;
+  -o-transition: opacity .2s .3s;
   width: 4.80956rem; }
 
 .banner-status-wrap-show .banner-ani-btn, .banner-status-wrap-show .banner-ani-btn-text {
   transition: opacity .3s;
+  -webkit-transition: opacity .3s;
+  -o-transition: opacity .3s;
   /*top: 182px/$ppr;
   height: 207px/$ppr;*/ }
 
@@ -499,14 +538,14 @@ body {
 /* tipsPressError */
 #wrapperError {
   width: 6.39856rem;
-  height: 3.66038rem;
+  height: 3.67456rem;
   top: 8.27131rem;
   position: absolute;
   left: 50%;
   margin-left: -3.19219rem;
   display: none;
   z-index: 34;
-  background-image: url(http://img12.360buyimg.com/cms/jfs/t3058/287/2745373566/48466/15ff6fe5/57e50c56N1eb865a2.png);
+  background: url(http://img12.360buyimg.com/cms/jfs/t3058/287/2745373566/48466/15ff6fe5/57e50c56N1eb865a2.png) no-repeat;
   background-size: cover; }
 
 .wrapper-error-text {
@@ -530,24 +569,36 @@ body {
   transform-origin: 50% 50%; }
 
 .banner-overflow-wrap .balloon-active-boom .balloon-img-active, .banner-overflow-wrap .balloon-active-boom .balloon-img-brand, .banner-overflow-wrap .balloon-active-boom .balloon-text {
-  animation-fill-mode: forwards;
-  animation: balloonScale 4s linear; }
+  animation: balloonScale 3s linear;
+  animation-fill-mode: forwards; }
 
 .balloon-active-boom .balloon-img-boom {
-  animation-fill-mode: forwards;
-  animation: balloonBoom 0.4s 3.2s steps(5); }
+  animation: balloonBoom 0.4s 2.4s steps(5);
+  animation-fill-mode: forwards; }
 
 .banner-overflow-wrap .balloon-active-boom {
   transform: scale(1.1) translateY(-10%);
-  transition: transform 3.2s linear; }
+  -webkit-transform: scale(1.1) translateY(-10%);
+  -o-transform: scale(1.1) translateY(-10%);
+  transition: transform 2.4s linear;
+  -webkit-transition: transform 2.4s linear;
+  -o-transition: transform 2.4s linear; }
 
-.banner-overflow-wrap .balloon-active-boom-pause .balloon-img-active, .banner-overflow-wrap .balloon-active-boom-pause .balloon-img-brand, .banner-overflow-wrap .balloon-active-boom-pause .balloon-text {
+.banner-overflow-wrap .balloon-active-reset .balloon-img-active, .banner-overflow-wrap .balloon-active-reset .balloon-img-brand, .banner-overflow-wrap .balloon-active-reset .balloon-text {
+  animation: balloonReset 3s;
+  -webkit-animation: balloonReset 3s;
+  -o-animation: balloonReset 3s;
   animation-fill-mode: forwards;
-  animation: balloonScalePause .5s; }
+  -webkit-animation-fill-mode: forwards;
+  -o-animation-fill-mode: forwards; }
 
 .banner-overflow-wrap .balloon-active-boom-pause {
   transform: scale(1) translateY(0);
-  transition: transform .5s linear; }
+  -webkit-transform: scale(1) translateY(0);
+  -o-transform: scale(1) translateY(0);
+  transition: transform .5s linear;
+  -webkit-transition: transform .5s linear;
+  -o-transition: transform .5s linear; }
 
 @keyframes balloonScale {
   0% {
@@ -556,7 +607,36 @@ body {
   75% {
     transform: scale(1.1);
     opacity: 0.8; }
-  90%,100% {
+  83% {
+    transform: scale(1.2);
+    opacity: 0; }
+  100% {
+    transform: scale(1.2);
+    opacity: 0; } }
+@-webkit-keyframes balloonScale {
+  0% {
+    transform: scale(1);
+    opacity: 1; }
+  75% {
+    transform: scale(1.1);
+    opacity: 0.8; }
+  83% {
+    transform: scale(1.2);
+    opacity: 0; }
+  100% {
+    transform: scale(1.2);
+    opacity: 0; } }
+@-o-keyframes balloonScale {
+  0% {
+    transform: scale(1);
+    opacity: 1; }
+  75% {
+    transform: scale(1.1);
+    opacity: 0.8; }
+  83% {
+    transform: scale(1.2);
+    opacity: 0; }
+  100% {
     transform: scale(1.2);
     opacity: 0; } }
 @keyframes balloonBoom {
@@ -565,18 +645,210 @@ body {
   100% {
     background-position: 0 -34.48981rem;
     opacity: 0; } }
+@-webkit-keyframes balloonBoom {
+  0% {
+    opacity: 0.6; }
+  100% {
+    background-position: 0 -34.48981rem;
+    opacity: 0; } }
+@-o-keyframes balloonBoom {
+  0% {
+    opacity: 0.6; }
+  100% {
+    background-position: 0 -34.48981rem;
+    opacity: 0; } }
+@keyframes balloonReset {
+  0% {
+    opacity: 0; }
+  50% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+@-webkit-keyframes balloonReset {
+  0% {
+    opacity: 0; }
+  50% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+@-o-keyframes balloonReset {
+  0% {
+    opacity: 0; }
+  50% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+.banner-status-ani .banner-ani-btn, .banner-status-ani .banner-ani-btn-text {
+  animation: btnTransform .7s;
+  animation-fill-mode: forwards; }
+
+.banner-status-ani .banner-ani-joy {
+  transition: none;
+  -webkit-transition: none;
+  -o-transition: none;
+  animation: aniJoy 0.7s steps(4);
+  -webkit-animation: aniJoy 0.7s steps(4);
+  -o-animation: aniJoy 0.7s steps(4); }
+
+@keyframes aniJoy {
+  0% {
+    background-position: 0 0; }
+  100% {
+    background-position: 0 -23.154rem; } }
+@-webkit-keyframes aniJoy {
+  0% {
+    background-position: 0 0; }
+  100% {
+    background-position: 0 -23.154rem; } }
+@-o-keyframes aniJoy {
+  0% {
+    background-position: 0 0; }
+  100% {
+    background-position: 0 -23.154rem; } }
+@keyframes btnTransform {
+  0% {
+    transform: scaleX(1) scaleY(1); }
+  100% {
+    transform: scaleX(1.1) scaleY(0.9); } }
+@-webkit-keyframes btnTransform {
+  0% {
+    transform: scaleX(1) scaleY(1); }
+  100% {
+    transform: scaleX(1.1) scaleY(0.9); } }
+@-o-keyframes btnTransform {
+  0% {
+    transform: scaleX(1) scaleY(1); }
+  100% {
+    transform: scaleX(1.1) scaleY(0.9); } }
+.banner-status-ani .banner-ani-rope {
+  animation: ropeTransform .7s;
+  animation-fill-mode: forwards; }
+
+.banner-status-ani .banner-ani-gas {
+  animation: gasTransform 1s infinite; }
+
+@keyframes gasTransform {
+  0% {
+    transform: translateX(-30%) translateY(65%) scale(0.1);
+    opacity: 0; }
+  50% {
+    transform: translateX(0) translateY(0) scale(1);
+    opacity: 1; }
+  100% {
+    transform: translateX(-30%) translateY(65%) scale(0.1);
+    opacity: 0; } }
+@-webkit-keyframes gasTransform {
+  0% {
+    transform: translateX(-30%) translateY(65%) scale(0.1);
+    opacity: 0; }
+  50% {
+    transform: translateX(0) translateY(0) scale(1);
+    opacity: 1; }
+  100% {
+    transform: translateX(-30%) translateY(65%) scale(0.1);
+    opacity: 0; } }
+@-o-keyframes gasTransform {
+  0% {
+    transform: translateX(-30%) translateY(65%) scale(0.1);
+    opacity: 0; }
+  50% {
+    transform: translateX(0) translateY(0) scale(1);
+    opacity: 1; }
+  100% {
+    transform: translateX(-30%) translateY(65%) scale(0.1);
+    opacity: 0; } }
+@keyframes ropeTransform {
+  0% {
+    transform: scaleX(1); }
+  100% {
+    transform: scaleX(1.01) translate(-1%); } }
+@-webkit-keyframes ropeTransform {
+  0% {
+    transform: scaleX(1); }
+  100% {
+    transform: scaleX(1.01) translate(-1%); } }
+@-o-keyframes ropeTransform {
+  0% {
+    transform: scaleX(1); }
+  100% {
+    transform: scaleX(1.01) translate(-1%); } }
+.banner-ani-joy {
+  background: url(http://img20.360buyimg.com/cms/jfs/t3223/55/2780108283/69747/4de2a0eb/57e65f32N9830cc39.png) no-repeat;
+  background-size: cover;
+  position: absolute;
+  /*top: -149px/$ppr;
+  left: 626px/$ppr;
+  left: 640px/$ppr;
+  width: 333px/$ppr;*/
+  width: 5.1075rem;
+  height: 5.7885rem;
+  top: -2.35513rem;
+  left: 8.35644rem;
+  left: 8.55506rem;
+  z-index: 28; }
+
+/* wrapper-rule */
+.wrapper-rule {
+  width: 11.10881rem;
+  padding: 0.28375rem;
+  background: #e0424f;
+  position: absolute;
+  top: 1.88694rem;
+  left: 2.19906rem;
+  border-radius: 0.28375rem;
+  z-index: 35;
+  display: none; }
+
+.rule-hd {
+  height: 1.41875rem;
+  line-height: 1.41875rem;
+  color: #000;
+  font-size: 0.681rem;
+  font-weight: bold;
+  width: 100%;
+  display: block;
+  text-align: center; }
+
+.rule-bd {
+  color: #fff;
+  font-size: 0.51075rem; }
+
+.rule-bd p {
+  margin-bottom: 0.14188rem; }
+
+.wrapper-rule .rule-btn-known {
+  background: url(http://img20.360buyimg.com/cms/jfs/t3247/194/2882610083/5065/912ff278/57e669aaNc3d93514.png);
+  width: 4.25625rem;
+  height: 1.22013rem;
+  margin: 0.63844rem auto 0.42563rem;
+  display: block;
+  background-size: cover; }
+
+.wrapper-rule .rule-btn-close {
+  background: url(http://img11.360buyimg.com/cms/jfs/t3244/320/2796740563/1781/1465e8f7/57e669abN20e42b1c.png);
+  width: 0.86544rem;
+  height: 0.86544rem;
+  background-size: cover;
+  position: absolute;
+  right: 0.28375rem;
+  top: 0.28375rem; }
+
 /* wrap-flr8:生活旅行处理 */
 .wrap-flr8 .z-three a {
   width: 100%; }
 
-.wrap-flr8 .z-three .goods-name, .wrap-flr8 .z-three .goods-price {
+.wrap-flr8 .z-three .goods-name, .wrap-flr8 .z-three .goods-price, .wrap-flr6 .z-three .goods-name, .wrap-flr6 .z-three .goods-price {
   display: none; }
 
 /* wrapper-no-chance */
-.wrapper-no-chance .banner-status-active .banner-ani-rope .banner-ani-rope-active, .wrapper-no-chance .banner-ani-btn-text {
+.wrapper-no-chance .banner-status-active .banner-ani-rope .banner-ani-rope-active, .wrapper-no-chance .banner-status-active .banner-ani-btn-text {
   display: none; }
 
 .wrapper-no-chance .banner-status-active .banner-ani-rope .banner-ani-rope-yjs {
   display: block; }
+
+/* reset sys */
+.general_purpose.goto_top {
+  right: 0; }
 
 /*# sourceMappingURL=1001.css.map */
