--- a/tongtianta/css/1001.css
+++ b/tongtianta/css/1001.css
@@ -134,7 +134,12 @@ body {
   width: 100%;
   overflow: hidden;
   position: relative;
-  padding-bottom: 50px; }
+  padding-bottom: 50px;
+  webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  -o-transform: translateZ(0);
+  transform: translateZ(0); }
 
 .wrap-banner img {
   display: block; }
@@ -318,7 +323,7 @@ body {
   height: 4.994rem;
   overflow: hidden; }
 
-.banner-status-wrap .banner-ani-rope .banner-ani-rope-active, .banner-status-wrap .banner-ani-rope .banner-ani-rope-yjs {
+.banner-status-wrap .banner-ani-rope .banner-ani-rope-active, .banner-status-wrap .banner-ani-rope .banner-ani-rope-yjs, .banner-status-wrap .banner-ani-btn-text img {
   position: absolute;
   top: 0;
   left: 0; }
@@ -352,16 +357,23 @@ body {
   top: 2.58213rem;
   left: 3.12125rem;
   left: 3.31988rem;
-  overflow: hidden; }
+  overflow: hidden;
+  z-index: 20; }
 
 .banner-ani-btn-text {
   width: 5.24938rem;
   left: 5.41963rem;
   left: 5.61825rem;
-  top: 2.6105rem; }
+  top: 2.6105rem;
+  z-index: 21; }
+
+.banner-btn-mask {
+  position: absolute;
+  height: 2.93681rem;
+  z-index: 21; }
 
 .banner-status-wrap .banner-ani-btn-text img, .banner-status-wrap .banner-ani-rope img, .banner-status-wrap .banner-ani-btn img {
-  display: none; }
+  opacity: 0; }
 
 .banner-ani-gas {
   width: 1.50388rem;
@@ -377,13 +389,18 @@ body {
   top: 147px/$ppr;
 }*/
 .banner-status-active .banner-ani-btn-text .banner-ani-btn-text-daqi, .banner-status-active .banner-ani-rope .banner-ani-rope-active, .banner-status-active .banner-ani-btn .banner-ani-btn-active, .banner-status-wks .banner-ani-rope .banner-ani-rope-active, .banner-status-wks .banner-ani-btn .banner-ani-btn-active {
-  display: block; }
+  opacity: 1; }
 
 .banner-status-wks .banner-ani-btn-text .banner-ani-btn-text-wks {
-  display: block; }
+  opacity: 1; }
 
 .banner-status-yjs .banner-ani-btn-text .banner-ani-btn-text-yjs, .banner-status-yjs .banner-ani-rope .banner-ani-rope-yjs, .banner-status-yjs .banner-ani-btn .banner-ani-btn-yjs {
-  display: block; }
+  opacity: 1; }
+
+.banner-status-wrap-show .banner-ani-rope {
+  transition: width .2s .3s;
+  -webkit-transition: width .2s .3s;
+  -o-transition: width .2s .3s; }
 
 /* banner-status-wrap-hide */
 .banner-status-wrap-hide .banner-ani {
@@ -392,14 +409,14 @@ body {
 .banner-status-wrap-hide .banner-ani-rope {
   width: 0;
   opacity: 1;
-  transition: all .3s;
-  -webkit-transition: all .3s;
-  -o-transition: all .3s; }
+  transition: width .3s;
+  -webkit-transition: width .3s;
+  -o-transition: width .3s; }
 
 .banner-status-wrap-hide .banner-ani-btn, .banner-status-wrap-hide .banner-ani-btn-text {
-  transition: all .3s;
-  -webkit-transition: all .3s;
-  -o-transition: all .3s;
+  transition: all .2s .2s;
+  -webkit-transition: all .2s .2s;
+  -o-transition: all .2s .2s;
   /*top: 389px/$ppr;
   height: 0;
   opacity: 1;*/ }
